20251106_jsp